vault/10-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: vault-gw
  namespace: vault
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - hosts:
    - vault.inv.gov.ar
    port:
      number: 80
      name: http
      protocol: HTTP
