vault/25-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: vault-vc
  namespace: vault
spec:
  gateways:
  - vault-gw
  hosts:
    - vault.inv.gov.ar
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: vault.vault.svc.cluster.local
        port:
          number: 8200
